# mhc-interp

./: .gitignore  README.md  pyproject.toml
results/analysis/: head_pattern_compare.csv  head_pattern_population_stats.csv  layer_distribution_top20.csv  pattern_vs_ablation_match.csv  top10_per_detector.csv
results/analysis/multi_role/: multi_role_heads.csv
results/attention_patterns/mhc/: attention.npy  attention_long.csv  tokens.json
results/attention_patterns/mhc_lite/: attention.npy  attention_long.csv  tokens.json
results/attention_patterns/residual/: attention.npy  attention_long.csv  tokens.json
results/heads/: summary.csv
results/heads/copy_suppression/: prompt.json
results/heads/duplicate/: prompt.json
results/heads/induction/: prompt.json
results/heads/prev_token/: prompt.json
results/heads/successor/: prompt.json
results/logit_lens/aggregate/: cat_sat_token_layer_ranges.csv  config.json  metrics.csv  metrics.npz  output_distribution_compare.csv  output_distribution_compare.json
results/logit_lens/mhc/: topk.txt  (+2 more)
src/mhc_interp/: __init__.py  _loader.py  app.py  attention_patterns.py  cat_sat_token_ranges.py  head_finder.py  head_pattern_compare.py  head_pattern_population.py  head_pattern_writeup_figure.py  indirect_sink_figure.py  layer_distribution.py  logit_lens.py  logit_lens_mean.py  model.py  multi_role_analysis.py  multi_role_spotlight.py  output_distribution_compare.py  path_patch_consumers.py  path_patch_pt.py  pattern_ablation_match.py  pattern_analysis.py  sae_train.py  stream_ae.py  top10_inventory.py  verticality_figure.py
(+82 files in other folders)
