[project]
name = "mhc-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Realmbird", email = "happychristopher777@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "einops>=0.8.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.3",
    "torch>=2.6.0",
    "transformers>=5.7.0",
]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
